@@ -1,8 +1,5 @@
 package com.googlecode.gtalksms.receivers;
 
-
-
-
 public interface XmppListener {
     void onConnectionStatusChanged(int oldStatus, int status);
     void onMessageReceived(String message);
